
rxtx-2.1 and rxtx-2.0 changes are kept in the same file.  skip to the version
you downloaded.

2.1-7pre18
		release locks when device is unavailable.
		Tico Ballagas <ballagas@cs.rwth-aachen.de>
		J2SE java.util.loggin and property file to match
		Stephane Cachat <stephane@cachat.org>
		termios stack overflow fix for Linux caused by including
		termbits.h
		Bill Holmes <weh@super.org>
		configure fixe for jdk 1.5
2.1-7pre17 Oct 17, 2003
		merged with 2.0 and took small changes from cvs.
2.1-7pre16 Mar 27, 2003
		remove debug "Condition" warnings used to debug NT4 issues.
2.1-7pre15a
		build without requiring rxtxZystem.dll.  Add back the
		TIOCGICOUNT #define for breaks.
2.1-7pre15
		100 fold speedup of read(byte) and read(byte[] ...)
		10 fold speedup of available()
		implementented read(byte[],offset,length,terminator[2]);
		-- not tested.
2.1-7pre14
		select fix that could cause crashes in read and the
		eventLoop
		-- cleaner patch is pending but not tested  as
		mentioned to Melissa and Jauhar.

		Tried to cause exceptions for possible NT4SP6 writes
		-- this was the "Three Blind Mice" test

		Changed build tool chain for XP problems (?).
		-- "XP Blows up"

		Support for COM1-256

		port reenumeration for people that change win32
		port assignments CommPortIdentifier:getPortIdentifiers()
2.1-7pre13
		Isolated lockup on w32 read.
		Added possible fix for w32 write lockups
		throw error on impossible write situations.
		- small input buffer, large writes.
2.1-7pre12
		All input stream methods are synchronized now. 
		I had this in before cleaning up but thought it
		was not needed (nothing failed here).	
		read() will toss an IOException (caught in the
		examples below but not in this library) if read
		thinks there will be a deadlock.
		Some small fixes found while merging with rxtx 2.0
		for public release.  Just sanity checks for library
		versions and such.

		- everything is in synch with the public CVS and