@@ -11,7 +11,11 @@ you downloaded.
 		termios stack overflow fix for Linux caused by including
 		termbits.h
 		Bill Holmes <weh@super.org>
+		Support for USB frobs in Linux (reports are that this does not
+		work exactly as expected with some kernels)
+		Christopher R. Wren <wren@merl.com>
 		configure fixe for jdk 1.5
+		
 2.1-7pre17 Oct 17, 2003
 		merged with 2.0 and took small changes from cvs.
 2.1-7pre16 Mar 27, 2003
